# plasma-keyboard

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md
.reuse/: dep5
autotests/: CMakeLists.txt  diacriticstest.cpp  mockcompositor.cpp  mockcompositor.h  mockinputmethodcompositor.cpp  plasmakeyboardtestcase.cpp  plasmakeyboardtestcase.h
kcm/: CMakeLists.txt  Messages.sh  kcm_plasmakeyboard.json  plasmakeyboardkcm.cpp  plasmakeyboardkcm.h
kcm/ui/: LocaleSelectorListView.qml  LocaleSelectorSidebar.qml  main.qml  main_handset.qml  main_mediacenter.qml  main_phone.qml
layouts/: CMakeLists.txt
layouts/defaultplugin/: CMakeLists.txt  Desktop.qml  FullDesktop.qml
layouts/en/: metadata.json
layouts/en/contents/layouts/: DesktopQwerty.qml  FullQwerty.qml
layouts/ja/: metadata.json
layouts/ja/contents/layouts/: DesktopRomaji.qml  FullRomaji.qml
layouts/ko/: metadata.json
layouts/ko/contents/layouts/: DesktopDubeolsik.qml  FullDubeolsik.qml  MobileDubeolsik.qml
layouts/zh-cn/: metadata.json
layouts/zh-cn/contents/layouts/: DesktopPinyin.qml  FullPinyin.qml
layouts/zh-tw/: metadata.json
po/ar/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/bg/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/ca/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/ca@valencia/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/cs/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/de/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/es/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/eu/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/fi/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/fr/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/ga/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/he/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/hu/: plasma-keyboard.po
po/ia/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/is/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/it/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/ka/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/ko/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/lt/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/lv/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/nb/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/nl/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/nn/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/pl/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/pt_BR/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/ro/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/ru/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/sk/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/sl/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/sv/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/tr/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/ug/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/uk/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/zh_CN/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/zh_TW/: kcm_plasmakeyboard.po  plasma-keyboard.po
src/: CMakeLists.txt  Messages.sh  config-plasma-keyboard.h.cmake  inputlisteneritem.cpp  inputlisteneritem.h  inputmethod.cpp  inputmethod_p.h  inputpanelintegration.cpp  inputpanelintegration.h  inputpanelrole.h  inputpanelwindow.cpp  inputpanelwindow.h  inputplugin.cpp  inputplugin.h  kwinfakeinput.cpp  layoutpathhelper.h  main.cpp  org.kde.plasma.keyboard.desktop  org.kde.plasma.keyboard.metainfo.xml  org.kde.qvk.desktop  plasmakeyboardsettings.kcfg  plasmakeyboardsettings.kcfgc  qwaylandinputpanelshellintegration.cpp  qwaylandinputpanelshellintegration_p.h  qwaylandinputpanelsurface.cpp  qwaylandinputpanelsurface_p.h  vibration.cpp  vibration.h  vibrationevent.h  windowmode.cpp  windowmode.h
src/layouts/ar_AR/: digits.qml  handwriting.qml  main.qml  numbers.qml  symbols.qml
src/layouts/bg_BG/: main.qml
src/layouts/cs_CZ/: main.qml
src/layouts/da_DK/: main.qml
src/layouts/de_DE/: main.qml
src/layouts/el_GR/: handwriting.qml  main.qml
src/layouts/en_GB/: main.qml
src/layouts/es_ES/: handwriting.qml  symbols.qml
src/layouts/es_MX/: main.qml  symbols.qml
src/layouts/et_EE/: main.qml
src/layouts/fa_FA/: digits.qml  handwriting.qml  main.qml  numbers.qml  symbols.qml
src/layouts/fallback/: dialpad.qml  digits.qml  handwriting.qml  main.qml  numbers.qml  symbols.qml
src/layouts/fi_FI/: main.qml
src/layouts/fr_CA/: main.qml
src/layouts/fr_FR/: main.qml
src/layouts/he_IL/: handwriting.qml  main.qml  symbols.qml
src/layouts/hi_IN/: main.qml  symbols.qml
src/layouts/hr_HR/: main.qml
src/layouts/hu_HU/: main.qml
src/layouts/it_IT/: main.qml
src/layouts/ja_JP/: handwriting.qml  main.qml  symbols.qml
src/layouts/ko_KR/: handwriting.qml  main.qml  symbols.qml
src/layouts/lv_LV/: main.qml
src/layouts/nb_NO/: main.qml
src/layouts/pl_PL/: main.qml
src/layouts/pt_BR/: main.qml
src/layouts/ro_RO/: main.qml
src/layouts/ru_RU/: main.qml
src/layouts/sk_SK/: main.qml
src/layouts/sl_SI/: main.qml
src/layouts/sq_AL/: main.qml
src/layouts/sr_SP/: handwriting.qml  main.qml
src/layouts/th_TH/: handwriting.qml  main.qml  symbols.qml
src/layouts/tr_TR/: main.qml
src/layouts/uk_UA/: main.qml
src/layouts/vi_VN/: main.qml  symbols.qml
src/layouts/zh_CN/: handwriting.qml  main.qml  symbols.qml
src/layouts/zh_TW/: main.qml  symbols.qml
src/lib/: CMakeLists.txt
src/lib/qml/: BreezeKeyPanel.qml  BreezeTheme.qml  KeysymKey.qml
src/overlay/: longpresstrigger.cpp  longpresstrigger.h  overlaycontroller.cpp  overlaycontroller.h  overlaytrigger.h  prefixquerytrigger.cpp  textexpansiontrigger.cpp
src/overlay/diacritics/: base.json  hu_HU.json  tr_TR.json
src/qml/: DiacriticsOverlay.qml  DiacriticsPopup.qml  DiacriticsPopupWindow.qml  LanguageDialog.qml  OverlayWindow.qml  main.qml
src/qmlplugin/: BreezeConstants.qml  BreezePopup.qml  CMakeLists.txt
src/styles/: CMakeLists.txt
src/styles/breeze/: BreezeKeyPanel.qml  BreezeKeyPanelBackground.qml  Theme.qml  style.qml
virtualkeyboard/: CMakeLists.txt  Messages.sh  inputengine.cpp
virtualkeyboard/components/keys/: ShiftKey.qml
(+2 files in other folders)
